frontend/src/routes/Timeline.css
.Timeline-Top-Banner {
    background-color: #5FAA4B;
    padding-top: 10px;
    padding-bottom: 6px;
    height: 40px;
    display: block;
}

.Timeline-Logo-Button {
    background: #5FAA4B;
    border-width: 0px;
    width: 40px;
    height: 40px;
    margin-right: 20px;
    margin-left: 10px;
}

.Timeline-Logo-Image {
    width: 40px;
    height: 40px;
    background-color: #DDDDDD;
    border-radius: 20px;
  }

.Timeline-Banner-Text {
    font-family: Consolas;
    font-size: 38px;
    vertical-align: text-bottom;
}

.Timeline-Banner-Button {
    float: right;
    background: #5FAA4B;
    border-width: 0px;
    width: 40px;
    height: 40px;
    margin-right: 20px;
    margin-left: 10px;
}

.Timeline-Banner-Logos {
    width: 40px;
}

.Timeline-Horizontal-Bar {
    background-color: #1F1F1F;
    height: 1px;
}

.Timeline-Selector {
    font-family: Consolas;
    font-size: 20px;
    background-color: #EEEEEE;
    margin-right: 0px;
}

.Timeline-Following {
    font-size: 20px;
    display: inline-grid;
    width: 50%;
    text-align: center;
    padding-top: 16px;
    padding-bottom: 18px;
    border-style: hidden;
    background-color: #DDDDDD;
}

.Timeline-Vertical-Bar{
    background-color: #1F1F1F;
    width: 1px;
    height: 59px;
    display: inline-grid;
    position: absolute;
}

.Topic-Selector {
    font-size: 20px;
    display: inline-grid;
    width: 50%;
    text-align: center;
    padding-top: 16px;
    padding-bottom: 18px;
    border-style: hidden;
}

.Timeline-Topic-Selection{
    font-size: 12px;
}

.Timeline-Posts-Wrapper {
    position: absolute;
    display: inline-block;
    width: 59.5%;
    height: calc(100vh - 135px);
    overflow-y: scroll;
    scrollbar-width: thin;
    padding: 5px;
}

.Timeline-Post {
    font-family: Consolas;
    display: block;
    width: calc(100% - 10px);
    background-color: #5FAA4B;
    border-radius: 5px;
    border-color: #1F1F1F;
    border-width: 1px;
    border-style: solid;
    line-height: 0.5;   
    margin-bottom: 4px;
    padding: 5px;
    padding-bottom: 1px;
    padding-left: 1px;
}

.Timeline-Post-Name{
    font-family: Consolas;
    font-size: 20px;
    display: inline-block;
    background-color: #5FAA4B;
    border-style: none;
}

.Timeline-Post-Name:hover{
    text-decoration: underline;
}

.Timeline-Post-PFP {
    display: inline;
    height: 40px;
    width: 40px;
    object-fit: cover;
    border-radius:50%;
    vertical-align: middle;
    padding-right: 5px;
}

.Timeline-Post-Topic{
      font-size: 15px;
      float: right;
 }

.Timeline-Post-Content {
    font-family: Consolas;
    font-size: 20px;
    display: block;
    width: 100%;
    text-align: left;
    background-color: #5FAA4B;
    line-height: 1;
    border-style: hidden;
}

.Timeline-Like-Button{
  background-color: #5FAA4B;
  border-radius: 5px;
  border-color: #1F1F1F;
  border-width: 1px;
}

.Timeline-Like-Button:hover{
    filter: brightness(90%);
}

.Timeline-Like-Button:hover + .Timeline-Likers {
    display: block;
  }

.Timeline-Likers {
    display: none;
    position: absolute;
    z-index: 1;
    background-color: #5FAA4B;
    border-color: #1F1F1F;  
    border-radius: 10px;
    border-style: solid;
    padding-left: 2px;
    padding-right: 2px;
  }

.Timeline-Likers:hover{
    display: block;
}

.Timeline-Liker-Button{
    display: block;
    background-color: #5FAA4B;
    border-style: hidden;
    border-radius: 10px;
}

.Timeline-Liker-Button:hover{
  filter: brightness(90%);
}

.Timeline-DMs {
    position: absolute;
    display: inline-block;
    width: 39.3%;
    height: calc(100vh - 135px);
    padding: 5px;
    right: 0;
    scrollbar-width: thin;
}

.DM-header {
    font-family: Consolas;
    font-size: 24px;
    margin-left: 45%;
}

.Timeline-Follow-Topic{
    font-family: Consolas;
    font-size: 16px;
    display: block;
    width: calc(100% - 2px);
    background-color: #5FAA4B;
    border-radius: 5px;
    border-color: #1F1F1F;
    border-width: 1px;
    border-style: solid;
    line-height: 2;   
    margin-bottom: 4px;
}

.Timeline-Follow-Topic:hover{
    filter: brightness(90%);
}

.Timeline-Followed-Topic{
    text-align: center;
    font-family: Consolas;
    font-size: 16px;
    display: block;
    width: calc(100% - 4px);
    background-color: #5FAA4B;
    border-radius: 5px;
    border-color: #1F1F1F;
    border-width: 1px;
    border-style: solid;
    line-height: 2;   
    margin-bottom: 4px;
}

.DM-wrapper{
    position: absolute;
    width: calc(100% - 10px);
    bottom: 0;
    height: calc(100%);
}

.DM-back{
    height: 10%;
    width: 20%;
    font-size: 50px;
    display: inline;
    text-align: left;
    background-color: white;
    border-style: hidden;
}

.DM-back:hover{
    filter: brightness(90%);
}

.DM-textarea{
    position:absolute;
    bottom: 0;
    font-family: Consolas;
    font-size: 16px;
    width: 80%;
    height: 8%;
    padding: 5px;
    border-radius: 8px;
    border-color: #1F1F1F;
    border-width: 1px;
}

.DM-send-button{
    font-size: 16px;
    position: absolute;
    bottom: 0;
    right: 0;
    width: 15%;
    height: 10%;
}

.DM-messages{
    height: calc(80% - 20px);
    overflow-y: scroll;
    border-style: solid;
    border-color: #5FAA4B;
    border-radius: 10px;
    padding: 10px;
    padding-bottom: 0px;
    padding-top: 0px;
}

.DM-name{
    display: inline;
    font-family: Consolas;
    font-size: 40px;
    margin-left: 25%;

    background-color: white;
    border-style: hidden;
}

.DM-name:hover{
    text-decoration: underline;
}

.DM-userMSG{
    float: inherit;
    width: fit-content;
    padding: 5px;
    border-style: solid;
    border-color: #5FAA4B;
    border-radius: 10px;
    margin: 1px;
}

.DM-otherMSG{
    width: fit-content;
    padding: 5px;
    border-style: solid;
    border-color: #5FAA4B;
    border-radius: 10px;
    margin: 1px;
}

.DM-message-wrapper{
    width: 100%;
    float: right;
}

.Accept-DM-Req{
    font-size: 20px;
    width: 97.8%;
    float: right;
    padding: 5px;
    margin: 1px;
    border-color: #5FAA4B;
    border-style: solid;
    border-radius: 5px;
    border-width: 2px;
}

.Accept-DM-Button{
    float: inherit;
    background-color: white;
    border-color: #5FAA4B;
    border-style: solid;
    border-radius: 5px;
    margin-right: 5px;
}

.Accept-DM-Button:hover{
    filter: brightness(90%);
}

.DM-button{
    font-size: 20px;
    width: 95%;
    padding: 5px;
    margin: 1px;
    border-color: #5FAA4B;
    border-style: solid;
    border-radius: 5px;
    background-color: white;
}

.DM-button:hover{
    filter: brightness(90%);
}

.DM-text {
    font-family: Consolas;
    font-size: 20px;
}

